--- a/estilos.css
+++ b/estilos.css
@@ -3,10 +3,12 @@
     margin-left: 20px;
     margin-right: 20px;
     font-size: 0;
+    font-family: sans-serif;
 }
 
 li{
     display: inline;
+    margin: 0 25px 0;
 }
 
 .header > * {
@@ -37,6 +39,21 @@ li{
     font-weight: 600;
 }
 
+.actions a {
+    color: #67b54b;
+  }
+  
+  .actions button {
+    color: white;
+    background-color: #67b54b;
+    padding-left: 14px;
+    padding-right: 14px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    border: 0;
+    border-radius: 5px;
+  }
+
 body {
     background-color: #fffbf7;
   }
@@ -44,6 +61,7 @@ body {
   h1 {
     color: #025157;
     text-align: center;
+    font-family: 'Alegreya', serif;
   }
   
   p {
