--- a/output.css
+++ b/output.css
@@ -1,8 +1,49 @@
 /*Fuentes*/
+.blog .title {
+  font-family: "Alegreya", serif;
+  color: #135359;
+}
+
 .blog {
   background-color: #ffffff;
   max-width: unset;
   padding: 5% 10%;
+}
+.blog .process-list {
+  margin-top: 40px;
+  margin-bottom: 36px;
+}
+.blog .process-list .process {
+  margin-bottom: 25px;
+}
+.blog .process-list .process > div > h3 {
+  color: #025157;
+  margin-bottom: 0;
+  font-size: 30px;
+  font-weight: 500;
+}
+.blog .process-list .process-icon {
+  width: 60px;
+  height: 60px;
+  margin-right: 10px;
+  text-align: center;
+}
+.blog .process-list .process-icon img {
+  height: 100%;
+}
+.blog button {
+  height: auto;
+  border-radius: 8px;
+  padding: 12px;
+  width: 180px;
+  margin-bottom: 15px;
+}
+.blog .metadata .category {
+  color: #67b54b;
+}
+.blog .metadata .read-time {
+  font-size: 14px;
+  color: #979797;
 }
 
 /*# sourceMappingURL=output.css.map */
