--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -3,9 +3,13 @@
 
 
 //Colores
+
 $dark-green-title: #025157;
 $dark-green-text: #135359;
 $white: #ffffff;
+$gray: #4a4a4a;
+$light-gray: #979797;
+$light-green: #67b54b;
 
 /*Fuentes*/
 $font-title: "Alegreya", serif;
